apps/overlays/vps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.labs.xavero.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: app.labs.xavero.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
